@@ -314,6 +314,13 @@ MTable::~MTable(  )
 
 }
 
+int MTable::fieldLen( int len )
+{
+    if( owner().cd_pg.find("UTF") != string::npos || owner().cd_pg.find("utf") != string::npos )
+	return len*2;
+    return len;
+}
+
 void MTable::postDisable(int flag)
 {
     if( flag )
@@ -614,9 +621,9 @@ void MTable::fieldFix( TConfig &cfg )
 	    string f_tp;
 	    switch(u_cfg.fld().type())
 	    {
-		    if( u_cfg.fld().len() < 256 || u_cfg.fld().flg()&TCfg::Key )
-			f_tp = "varchar("+TSYS::int2str(vmax(1,vmin((u_cfg.fld().flg()&TCfg::Key)?150:255,u_cfg.fld().len())))+")";
-		    else if( u_cfg.fld().len() < 65536 )
+		    if( fieldLen(u_cfg.fld().len()) < 256 || u_cfg.fld().flg()&TCfg::Key )
+			f_tp = "varchar("+TSYS::int2str(vmax(1,vmin((u_cfg.fld().flg()&TCfg::Key)?150:255,fieldLen(u_cfg.fld().len()))))+")";
+		    else if( fieldLen(u_cfg.fld().len()) < 65536 )
 			f_tp = "text";
 		    else f_tp = "mediumtext";
 		    break;
@@ -668,9 +675,9 @@ void MTable::fieldPrmSet( TCfg &cfg, const string &last, string &req )
     switch(cfg.fld().type())
     {
 	case TFld::String:
-	    if( cfg.fld().len() < 256 || cfg.fld().flg()&TCfg::Key )
-		req=req+"varchar("+SYS->int2str(vmax(1,vmin((cfg.fld().flg()&TCfg::Key)?150:255,cfg.fld().len())))+") NOT NULL DEFAULT '"+cfg.fld().def()+"' ";
-	    else if( cfg.fld().len() < 65536 )
+	    if( fieldLen(cfg.fld().len()) < 256 || cfg.fld().flg()&TCfg::Key )
+		req=req+"varchar("+SYS->int2str(vmax(1,vmin((cfg.fld().flg()&TCfg::Key)?150:255,fieldLen(cfg.fld().len()))))+") NOT NULL DEFAULT '"+cfg.fld().def()+"' ";
+	    else if( fieldLen(cfg.fld().len()) < 65536 )
 		req=req+"text NOT NULL ";// DEFAULT '"+cfg.fld().def()+"' ";
 	    else req=req+"mediumtext NOT NULL ";// DEFAULT '"+cfg.fld().def()+"' ";
 	    break;
